@startuml

title __BOOK DATA ADAPTER's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    class BookListItem {
      - cover : Bitmap
      - coverId : String
      - title : String
      - author : String
      - isbn : String
      - status : String
      - ownerId : String
      {static} + getComparator()
      + BookListItem()
      + BookListItem()
      + BookListItem()
      + getCover()
      + setCover()
      + getTitle()
      + setTitle()
      + getAuthor()
      + setAuthor()
      + getIsbn()
      + setIsbn()
      + getStatus()
      + setStatus()
      + getOwnerId()
      + setOwnerId()
      + getCoverId()
      + setCoverId()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookDataAdapter {
      - myBorrowedBookList : List<BookListItem>
      - myOwnedBookList : List<BookListItem>
      {static} - instance : BookDataAdapter
      {static} + getInstance()
      - BookDataAdapter()
      + getMyBorrowedBooksList()
      + getMyOwnedBooksList()
      - fetchMyBorrowedBooksList()
      - fetchMyOwnedBooksList()
      - userBooksToBookList()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class CacheObserver {
      + update()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.cache {
    class ObservableUserCache {
      {static} - instance : ObservableUserCache
      - databaseReference : DatabaseReference
      - valueEventListener : ValueEventListener
      - userController : UserController
      - user : User
      - database : DatabaseReference
      {static} + getInstance()
      - ObservableUserCache()
      + updateReference()
      + getBorrowedBook()
      + getOwnedBook()
      + getBorrowedBooks()
      + getOwnedBooks()
      + getProfile()
      + getChatRoomId()
    }
  }
}


note top of BookDataAdapter
  Adapter Pattern & Observer Pattern
  Adaptees:
  - ImageController
  - BookController
end note

note top of ObservableUserCache
  Observer Pattern
end note

BookDataAdapter -up-|> Observable
BookDataAdapter +-down- CacheObserver
CacheObserver -up-|> Observer
BookDataAdapter o-- "*" BookListItem
ObservableUserCache o-- "1" CacheObserver
ObservableUserCache -up-|> Observable


right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml